objects/pepAssessment_Note__c.object
<CustomObject>
    <description>Credit Manager and Assessor Notes</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Assessment Notes</relationshipLabel>
        <relationshipName>Assessment_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note_Details__c</fullName>
        <label>Note Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Note subject</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assessment Note</label>
    <nameField>
        <displayFormat>AS-{0000000000}</displayFormat>
        <label>Assessment Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>